// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Component should render correctly 1`] = `
<Fragment>
  <select
    className=""
    disabled={false}
    value=""
  >
    <option />
    <option />
  </select>
</Fragment>
`;

exports[`Select Component should render with placeholder 1`] = `
<Fragment>
  <select
    className=""
    disabled={false}
    value=""
  >
    <option
      value=""
    >
      test
    </option>
    <option />
    <option />
  </select>
</Fragment>
`;
